Assignment 2 Part 3 - Dash/Teleport

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,6 +45,8 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/ActionRoguelike.ARCharacter",NewName="/Script/ActionRoguelike.AR_Character")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.ARMagicProjectile",NewName="/Script/ActionRoguelike.AR_MagicProjectile")
++ClassRedirects=(OldName="/Script/ActionRoguelike.TeleportProjectile",NewName="/Script/ActionRoguelike.AR_TeleportProjectile")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_Character.SpecialProjectileClass",NewName="/Script/ActionRoguelike.AR_Character.SpecialAttackProjectileClass")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
