Basic Audio Implementation
Added Audio Plugins to Project (MetaSounds, AudioModulation, Gameplay Audio, Gameplay Audio Volume)
Fixed Redirectors
Basic audio implementation for the projectile

--- a/ActionRoguelike.uproject
+++ b/ActionRoguelike.uproject
@@ -20,6 +20,22 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "Metasound",
+			"Enabled": true
+		},
+		{
+			"Name": "AudioModulation",
+			"Enabled": true
+		},
+		{
+			"Name": "AudioGameplay",
+			"Enabled": true
+		},
+		{
+			"Name": "AudioGameplayVolume",
+			"Enabled": true
 		}
 	]
 }
