Moved all Projectile blueprint code to C++

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,2 @@
-
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=C6DE74004BF7D4CD8766A699DD8AA228
+ProjectID = C6DE74004BF7D4CD8766A699DD8AA228
