--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,6 +46,7 @@ ManualIPAddress =
 +ClassRedirects = (OldName="/Script/ActionRoguelike.TeleportProjectile",NewName="/Script/ActionRoguelike.AR_TeleportProjectile")
 +PropertyRedirects = (OldName="/Script/ActionRoguelike.AR_Character.SpecialProjectileClass",NewName="/Script/ActionRoguelike.AR_Character.SpecialAttackProjectileClass")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.AR_BTService_CheckAttackRange",NewName="/Script/ActionRoguelike.AR_BTS_CheckAttackRange")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_GameMode.AiHalfHight",NewName="/Script/ActionRoguelike.AR_GameMode.AiHalfHeight")
 
 [/Script/Engine.CollisionProfile]
 -Profiles = (Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
