--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,6 +77,7 @@ ManualIPAddress =
 +ClassRedirects=(OldName="/Script/ActionRoguelike.AR_BTService_CheckAttackRange",NewName="/Script/ActionRoguelike.AR_BTS_CheckAttackRange")
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_GameMode.AiHalfHight",NewName="/Script/ActionRoguelike.AR_GameMode.AiHalfHeight")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.AR_Character",NewName="/Script/ActionRoguelike.AR_Player")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_AICharacter.RagDollDuration",NewName="/Script/ActionRoguelike.AR_AICharacter.RagdollDuration")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
