Using Action system for player actions
Turned Projectile Attack, Special Attack and Special Ability into ActionObjects
fixed impulse from attacks on ragdoll state

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,6 +80,7 @@ ManualIPAddress =
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_GameMode.AiHalfHight",NewName="/Script/ActionRoguelike.AR_GameMode.AiHalfHeight")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.AR_Character",NewName="/Script/ActionRoguelike.AR_Player")
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_AICharacter.RagDollDuration",NewName="/Script/ActionRoguelike.AR_AICharacter.RagdollDuration")
++ClassRedirects=(OldName="/Script/ActionRoguelike.AR_ActionObject",NewName="/Script/ActionRoguelike.AR_BaseAction")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
