Simple Key & Lock mechanic using gameplay tags

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,4 +10,8 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Attacking",DevComment="Character is Attacking")
 +GameplayTagList=(Tag="Action.Sprinting",DevComment="Character is Sprinting")
++GameplayTagList=(Tag="Keycard.Blue",DevComment="")
++GameplayTagList=(Tag="Keycard.Blue.Advanced",DevComment="")
++GameplayTagList=(Tag="Keycard.Red",DevComment="")
++GameplayTagList=(Tag="Keycard.Yellow",DevComment="")
 
