Refactoring of Action System to use Gameplay Tags
Refactored the whole Action System to use Gameplay Tags
Created new Parry action
Refactored code to use Enhanced Input System

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,12 +6,22 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Action.Ability.Special",NewTagName="Action.Attack.Special")
++GameplayTagRedirects=(OldTagName="Action.Attacking",NewTagName="Action.Attack.Primary")
++GameplayTagRedirects=(OldTagName="Action.Sprinting",NewTagName="Action.Movement.Sprint")
++GameplayTagRedirects=(OldTagName="Status.Parrying",NewTagName="Action.Ability.Parry")
++GameplayTagRedirects=(OldTagName="Action.Attack.Special",NewTagName="Action.Attack.Secondary")
++GameplayTagRedirects=(OldTagName="Action.Movement.Ability",NewTagName="Action.Ability.Movement")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
-+GameplayTagList=(Tag="Action.Attacking",DevComment="Character is Attacking")
-+GameplayTagList=(Tag="Action.Sprinting",DevComment="Character is Sprinting")
++GameplayTagList=(Tag="Action.Ability.Movement",DevComment="")
++GameplayTagList=(Tag="Action.Ability.Parry",DevComment="")
++GameplayTagList=(Tag="Action.Attack.Primary",DevComment="Character is Attacking")
++GameplayTagList=(Tag="Action.Attack.Secondary",DevComment="")
++GameplayTagList=(Tag="Action.Movement.Sprint",DevComment="Character is Sprinting")
 +GameplayTagList=(Tag="Keycard.Blue",DevComment="")
 +GameplayTagList=(Tag="Keycard.Blue.Advanced",DevComment="")
++GameplayTagList=(Tag="Keycard.Green",DevComment="")
 +GameplayTagList=(Tag="Keycard.Red",DevComment="")
 +GameplayTagList=(Tag="Keycard.Yellow",DevComment="")
 
