Burning DOT effect

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -24,4 +24,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Keycard.Green",DevComment="")
 +GameplayTagList=(Tag="Keycard.Red",DevComment="")
 +GameplayTagList=(Tag="Keycard.Yellow",DevComment="")
++GameplayTagList=(Tag="Status.Burning",DevComment="Burning Status Effect")
 
