Interaction Widget Prompt

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,6 +81,9 @@ ManualIPAddress =
 +ClassRedirects=(OldName="/Script/ActionRoguelike.AR_Character",NewName="/Script/ActionRoguelike.AR_Player")
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_AICharacter.RagDollDuration",NewName="/Script/ActionRoguelike.AR_AICharacter.RagdollDuration")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.AR_ActionObject",NewName="/Script/ActionRoguelike.AR_BaseAction")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_InteractionComponent.InteractWidget",NewName="/Script/ActionRoguelike.AR_InteractionComponent.InteractWidgetClass")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_InteractionComponent.InteractionDistance",NewName="/Script/ActionRoguelike.AR_InteractionComponent.TraceDistance")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.AR_InteractionComponent.InteractionRadius",NewName="/Script/ActionRoguelike.AR_InteractionComponent.TraceRadius")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
