Assignment 6 - Part 2 - Thorn Effect in C++

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -24,5 +24,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Keycard.Green",DevComment="")
 +GameplayTagList=(Tag="Keycard.Red",DevComment="")
 +GameplayTagList=(Tag="Keycard.Yellow",DevComment="")
++GameplayTagList=(Tag="Status",DevComment="Various status effects")
 +GameplayTagList=(Tag="Status.Burning",DevComment="Burning Status Effect")
++GameplayTagList=(Tag="Status.Thorn",DevComment="Thorn reflection damage effect")
 
